Bug 349026 - Japanese UI - gradient/patterns/workspace menu empty
Summary: Japanese UI - gradient/patterns/workspace menu empty
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.9.4
Platform: Microsoft Windows Microsoft Windows
: NOR major
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 348881 349322 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-06-11 13:31 UTC by guruguru.sp
Modified: 2015-06-20 10:57 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
empty patterns dialog (18.62 KB, image/png)
2015-06-11 13:31 UTC, guruguru.sp
Details
empty pattern with all option (16.84 KB, image/png)
2015-06-11 13:32 UTC, guruguru.sp
Details

Note You need to log in before you can comment on or make changes to this bug.
Description guruguru.sp 2015-06-11 13:31:03 UTC
When I run Krita 2.9.5 in Japanese UI, gradient/patterns/workspace become empty

Reproducible: Always

Steps to Reproduce:
1. Switch language to Japanese
2. Open document and see toolbar - gradient,patterns are blank
3. Open gradient/patterns/workspace

Actual Results:  
gradient/patterns/workspace are empty.

Expected Results:  
gradient/patterns/workspace items are correctly loaded.

As for gradient and patterns, I can select "すべて"(all) to get resources load.
Comment 1 guruguru.sp 2015-06-11 13:31:54 UTC
Created attachment 93119 [details]
empty patterns dialog
Comment 2 guruguru.sp 2015-06-11 13:32:43 UTC
Created attachment 93120 [details]
empty pattern with all option
Comment 3 Halla Rempt 2015-06-18 10:50:53 UTC
I can confirm the issue for the workspaces, but not for the patterns or gradients. But there is a big problem with the tagging systems: tags are simple strings, so they cannot be translated at the moment :-(
Comment 4 guruguru.sp 2015-06-18 12:21:14 UTC
Krita2.9.4.7 in Japanese does not have this issue.(Krita2.9.4.7 shows localized "all" tag yet showing gradients and patterns correctly)
So something between 2.9.4.7 and 2.9.5 probably broke this.
Comment 5 guruguru.sp 2015-06-18 12:22:55 UTC
localized resources are the same between 2.9.4.7 and 2.9.5.
Comment 6 Halla Rempt 2015-06-19 07:34:00 UTC
*** Bug 349322 has been marked as a duplicate of this bug. ***
Comment 7 Halla Rempt 2015-06-19 19:56:35 UTC
*** Bug 348881 has been marked as a duplicate of this bug. ***
Comment 8 Dmitry Kazakov 2015-06-20 10:57:31 UTC
Git commit 4e52524519bb145a3778f12aa9eb07bcd8249e5e by Dmitry Kazakov.
Committed on 20/06/2015 at 10:56.
Pushed by dkazakov into branch 'calligra/2.9'.

Do not localize 'All' resource tag

It fixes KisPresetSelectorStrip to show presets on localized systems.

Ideally the solution should be the following:

1) All the tags are KoID
2) All the tags are translatable :(

M  +1    -1    libs/widgets/KoResourceTaggingManager.cpp

http://commits.kde.org/calligra/4e52524519bb145a3778f12aa9eb07bcd8249e5e