Do not localize 'All' resource tag

It fixes KisPresetSelectorStrip to show presets on localized systems.

Ideally the solution should be the following:

1) All the tags are KoID
2) All the tags are translatable :(

BUG:349026